--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
-        go: ["1.23", "1.24"]
+        os: [ubuntu-latest]
 
     steps:
       - name: Checkout code
@@ -22,7 +21,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: ${{ matrix.go }}
+          go-version-file: go.mod
 
       - name: Download dependencies
         run: go mod download
@@ -35,7 +34,7 @@ jobs:
         with:
           files: ./coverage.out
           flags: unittests
-          name: codecov-${{ matrix.os }}-go${{ matrix.go }}
+          name: codecov-${{ matrix.os }}-go
 
   lint:
     name: Lint
@@ -48,7 +47,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.22"
+          go-version-file: go.mod
 
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v4
@@ -66,7 +65,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.22"
+          go-version-file: go.mod
 
       - name: Build
         run: go build -v ./...
